feat: implement CORS configuration and add user service routes in Gateway